@@ -1,3 +1,8 @@
+2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>
+
+	* parser.y (sort_statement): Table sort.
+	* typeck.c (cb_emit_sort_init): Updated for table sort.
+
 2004-03-30  Keisuke Nishida  <knishida@open-cobol.org>
 
 	* tree.c (cb_ref): Resolve by file name.
